<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">komunikator</string>
    <string name="action_settings">Settings</string>
    <string name="button_name">Send</string>
    <string name="send_hint">Message</string>
    <string name="service_is_running">You are logged in</string>
    <string name="could_not_send_message">Sending message failed, click to retry</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="password_repeat_label">Repeat password</string>
    <string name="signup_label">Sign up</string>
    <string name="signup_button">Signup now</string>
    <string name="title_activity_profile_edit">Profile</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint">Serach Contacts</string>
    <string name="action_compose">Talk</string>
    <string name="action_add_contact_list">Add</string>
    <string name="action_delete_contact_list">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_edit_contact">Edit</string>
    <string-array name="items">
        <item>Profil</item>
        <item>Conversations</item>
        <item>Contacts</item>
        <item>Item 4</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="shared_pref_webservice">komunikator.shared_preferences_webservice</string>
    <string name="shared_pref_webservice_token_fld">shared_pref_webservice_token</string>
    <string name="already_signed_up_question">Already have an accont?</string>
    <string name="sign_in_hyperlink">Sign In</string>
    <string name="signin_button">Sign me in</string>
    <string name="signin_label">Sign In</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_save_button">Save profile</string>
    <string name="profile_displayed_name">Displayed name</string>
</resources>
