<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search_2"
        android:title="@string/action_search"
        android:showAsAction="ifRoom|collapseActionView|withText"
        android:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_action_chat"
        android:title="@string/action_compose"
        android:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_add_contact_list"
        android:icon="@drawable/ic_action_new_event_2"
        android:title="@string/action_add_contact_list"
        android:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_delete_contacts_list"
        android:icon="@drawable/ic_action_discard_2"
        android:title="@string/action_delete_contact_list"
        android:showAsAction="ifRoom|withText" />

</menu>