<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/profile_save_button"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="6"
        android:onClick="saveProfile"
        android:text="@string/profile_save_button" />

    <Space
        android:layout_column="2"
        android:layout_gravity="fill_vertical"
        android:layout_row="9" />

    <EditText
        android:id="@+id/profile_first_name_field"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="top|center_horizontal"
        android:layout_row="3"
        android:ems="10"
        android:hint="@string/profile_first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/profile_last_name_field"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="4"
        android:ems="10"
        android:hint="@string/profile_last_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:maxHeight="@dimen/max_profile_image_height"
        android:maxWidth="@dimen/max_profile_image_width"
        android:onClick="choosePhoto"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/contactsButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="7"
        android:onClick="chooseContactsButton"
        android:text="Contacts" />

    <EditText
        android:id="@+id/profile_nickname_field"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_row="5"
        android:ems="10"
        android:hint="@string/profile_displayed_name" />

</GridLayout>